fixed image stretching in safari

--- a/styles.css
+++ b/styles.css
@@ -159,6 +159,7 @@ body {
 
 .logo-wrapper {
     display: flex;
+    align-items: center;
     margin: auto;
     justify-content: center;
 }
